--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "jest": "^27.0.6"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.14.5"
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "jest-fetch-mock": "^3.0.3"
   },
   "scripts": {
     "test": "jest"
